View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026609 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-08-27 09:55 | 2016-04-20 15:49 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026609: Wrong result obtained by solid classifier algorithm. | ||||
Description | Wrong result obtained by solid classifier algorithm. The problem was noticed by the customer: http://asml.redmine.opencascade.com/issues/30 | ||||
Steps To Reproduce | restore z restore p bclassify z p #Result: The point is OUT of shape # but it should be IN. | ||||
Additional information and documentation updates | The treatment of "inverted" shapes by solid classifier algorithm is improved. "Inverted" shape is one that represent cavity in material. | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug26609 | ||||
related to | 0026590 | assigned | Inconsistent results obtained by checkshape |
2015-08-27 09:55 developer |
0000030.zip (1,660 bytes) |
|
Branch CR26609 has been created by ifv. SHA-1: 3e5e27749b9557144e48960aeb73be3c0e7a666e Detailed log of new commits: Author: ifv Date: Mon Sep 21 12:20:07 2015 +0300 0026609: Wrong result obtained by solid classifier algorithm. |
|
Branch CR26609 is ready for review and tests |
|
Reviewed. |
|
Dear BugMaster, Branch CR26609 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms and tested. SHA-1: 3e5e27749b9557144e48960aeb73be3c0e7a666e Number of compiler warnings: occt component: Linux: 15 (15 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26609-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26609-master-occt-64/Windows-64-VC10/summary.html Boolean volumemaker B9 (Windows only), D4 (Windows only), D6 Testing on Linux: Total MEMORY difference: 92027358 / 92153107 [-0.14%] Total CPU difference: 19262.43999999915 / 18923.859999998986 [+1.79%] Testing on Windows: Total MEMORY difference: 56816161 / 56825005 [-0.02%] Total CPU difference: 17322.865843299038 / 16809.482152399127 [+3.05%] There are differences in images found by testdiff: http://occt-tests/CR26609-master-occt-64/Debian70-64/diff-Debian70-64.html http://occt-tests/CR26609-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html Boolean volumemaker A8, D7 |
|
Branch CR26609 has been updated forcibly by ifv. SHA-1: a2151cd1fbd0accb8eb85bb5af1d3c957994147b |
|
Branch CR26609 is updated and can be tested |
|
Dear BugMaster, Branch CR26609 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: a2151cd1fbd0accb8eb85bb5af1d3c957994147b Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26609-master-occt-64/Windows-64-VC10/boolean/volumemaker/D6.html boolean volumemaker D6: FAILED Testing cases: http://occt-tests/CR26609-master-occt-64/Debian70-64/bugs/modalg_6/bug26609.html http://occt-tests/CR26609-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26609.html bugs modalg_6 bug26609: OK Testing on Linux: occt component : Total MEMORY difference: 93607314 / 93277685 [+0.35%] Total CPU difference: 19499.029999999515 / 19595.019999999236 [-0.49%] products component : Total MEMORY difference: 26254341 / 26289080 [-0.13%] Total CPU difference: 7160.950000000005 / 7198.059999999998 [-0.52%] Testing on Windows: occt component : Total MEMORY difference: 57904311 / 57932432 [-0.05%] Total CPU difference: 17968.241980299106 / 17726.565231099077 [+1.36%] products component : Total MEMORY difference: 17122159 / 17129161 [-0.04%] Total CPU difference: 5626.160464899974 / 5621.652035999961 [+0.08%] There are no differences in images found by testdiff. |
|
Dear ifv, Branch has been rejected due to: - regressions/differences/improvements |
|
Branch CR26609 has been updated by mkv. SHA-1: 2df26d9c28af837fbadb787aa7a37c97a512ee7e Detailed log of new commits: Author: mkv Date: Tue Sep 29 18:44:30 2015 +0300 Test case for issue CR26609 |
|
Dear ifv, could you please review following test case bugs modalg_6 bug26609 |
|
Branch CR26609 has been updated forcibly by ifv. SHA-1: 7dbb329bfccddc5d9f11d78a43cc520422168d4e |
|
Ok for test case. Branch CR26609 is updated, please test |
|
Dear BugMaster, Branch CR26609 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 7dbb329bfccddc5d9f11d78a43cc520422168d4e Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: Improvements: http://occt-tests/CR26609-master-occt-64/Debian70-64/boolean/gdml_private/G7.html boolean gdml_private G7 http://occt-tests/CR26609-master-occt-64/Debian70-64/boolean/gdml_private/T2.html boolean gdml_private T2 http://occt-tests/CR26609-master-occt-64/Debian70-64/boolean/gdml_private/ZJ3.html boolean gdml_private ZJ3 http://occt-tests/CR26609-master-occt-64/Debian70-64/boolean/gdml_private/ZJ4.html boolean gdml_private ZJ4 Testing cases: http://occt-tests/CR26609-master-occt-64/Debian70-64/bugs/modalg_6/bug26609.html http://occt-tests/CR26609-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26609.html bugs modalg_6 bug26609: OK Testing on Linux: occt component : Total MEMORY difference: 93118233 / 92262834 [+0.93%] Total CPU difference: 19681.359999999753 / 19770.619999999843 [-0.45%] products component : Total MEMORY difference: 26344181 / 26369733 [-0.10%] Total CPU difference: 7340.2199999999975 / 7378.749999999995 [-0.52%] Testing on Windows: occt component : Total MEMORY difference: 58070841 / 58089039 [-0.03%] Total CPU difference: 18225.456429099137 / 18228.68564979895 [-0.02%] products component : Total MEMORY difference: 17178489 / 17183716 [-0.03%] Total CPU difference: 5607.42474479997 / 5689.09126829997 [-1.44%] There are following differences in images found by testdiff. http://occt-tests/CR26609-master-occt-64/Debian70-64/diff-Debian70-64.html http://occt-tests/CR26609-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html IMAGE boolean gdml_private S9: S9.png differs IMAGE boolean gdml_private J6: J6.png differs IMAGE boolean gdml_private P2: P2.png differs IMAGE boolean gdml_private N8: N8.png differs IMAGE boolean gdml_private O3: O3.png differs IMAGE boolean gdml_private W1: W1.png differs IMAGE boolean gdml_private O9: O9.png differs IMAGE boolean gdml_private H9: H9.png differs IMAGE boolean gdml_private V2: V2.png differs IMAGE boolean volumemaker B4: B4.png differs IMAGE boolean volumemaker A5: A5.png differs IMAGE boolean volumemaker D7: D7.png differs IMAGE boolean volumemaker D4: D4.png differs IMAGE boolean volumemaker A8: A8.png differs |
|
Dear ifv, Branch CR26609 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Branch CR26609 has been updated by mkv. SHA-1: d4622a93d004da0f77e0f42788785009ce7bed4c Detailed log of new commits: Author: mkv Date: Wed Oct 7 13:44:08 2015 +0300 Test case for issue CR26609 |
|
Difference of images correspond to current state of algorithms. New images can be considered as correct. |
|
Branch CR26609 has been updated by mkv. SHA-1: 2115be2e834f33eb48c8742af2c16c698d436ade Detailed log of new commits: Author: mkv Date: Thu Oct 8 12:34:48 2015 +0300 Correction of test cases for issue CR26609 |
|
Dear BugMaster, following test cases are corrected and pushed to branch CR of occt git-repository boolean gdml_private T2, ZJ3, ZJ4 Now its are OK. |
|
Dear BugMaster, Branch CR26609 is TESTED. |
|
Branch CR26609 has been deleted by kgv. SHA-1: 2115be2e834f33eb48c8742af2c16c698d436ade |
occt: master a0258acd 2015-10-08 10:26:15
Committer: bugmaster Details Diff |
0026609: Wrong result obtained by solid classifier algorithm. Test case for issue CR26609 Correction of test cases for issue CR26609 |
Affected Issues 0026609 |
|
mod - src/BRepClass3d/BRepClass3d_SolidExplorer.cxx | Diff File | ||
mod - src/IntCurvesFace/IntCurvesFace_Intersector.cxx | Diff File | ||
mod - src/IntCurvesFace/IntCurvesFace_Intersector.hxx | Diff File | ||
mod - tests/boolean/gdml_private/T2 | Diff File | ||
mod - tests/boolean/gdml_private/ZJ3 | Diff File | ||
mod - tests/boolean/gdml_private/ZJ4 | Diff File | ||
mod - tests/boolean/volumemaker/D4 | Diff File | ||
add - tests/bugs/modalg_6/bug26609 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-08-27 09:55 |
|
New Issue | |
2015-08-27 09:55 |
|
Assigned To | => msv |
2015-08-27 09:55 |
|
File Added: 0000030.zip | |
2015-08-27 09:56 |
|
Status | new => assigned |
2015-08-27 09:57 |
|
Relationship added | related to 0026590 |
2015-08-27 14:28 |
|
Assigned To | msv => ifv |
2015-09-21 12:54 | git | Note Added: 0045941 | |
2015-09-21 12:56 |
|
Note Added: 0045942 | |
2015-09-21 12:56 |
|
Assigned To | ifv => msv |
2015-09-21 12:56 |
|
Status | assigned => resolved |
2015-09-21 14:27 |
|
Note Added: 0045945 | |
2015-09-21 14:27 |
|
Assigned To | msv => bugmaster |
2015-09-21 14:27 |
|
Status | resolved => reviewed |
2015-09-21 17:17 |
|
Assigned To | bugmaster => apv |
2015-09-22 16:36 |
|
Note Added: 0046010 | |
2015-09-22 16:36 |
|
Assigned To | apv => ifv |
2015-09-22 16:36 |
|
Status | reviewed => assigned |
2015-09-28 13:33 | git | Note Added: 0046204 | |
2015-09-28 18:23 |
|
Status | assigned => resolved |
2015-09-28 18:24 |
|
Note Added: 0046230 | |
2015-09-28 18:24 |
|
Assigned To | ifv => bugmaster |
2015-09-28 18:24 |
|
Status | resolved => reviewed |
2015-09-28 19:51 |
|
Assigned To | bugmaster => mkv |
2015-09-29 18:42 |
|
Note Added: 0046288 | |
2015-09-29 18:43 |
|
Note Added: 0046289 | |
2015-09-29 18:43 |
|
Assigned To | mkv => ifv |
2015-09-29 18:43 |
|
Status | reviewed => feedback |
2015-09-29 18:44 | git | Note Added: 0046290 | |
2015-09-29 18:45 |
|
Note Added: 0046291 | |
2015-09-29 18:45 |
|
Test case number | => bugs modalg_6 bug26609 |
2015-10-06 13:02 | git | Note Added: 0046501 | |
2015-10-06 13:08 |
|
Note Added: 0046502 | |
2015-10-06 13:08 |
|
Assigned To | ifv => bugmaster |
2015-10-06 13:08 |
|
Status | feedback => reviewed |
2015-10-06 13:37 |
|
Assigned To | bugmaster => mkv |
2015-10-07 13:33 |
|
Note Added: 0046556 | |
2015-10-07 13:41 |
|
Note Added: 0046559 | |
2015-10-07 13:41 |
|
Assigned To | mkv => ifv |
2015-10-07 13:41 |
|
Status | reviewed => feedback |
2015-10-07 13:44 | git | Note Added: 0046560 | |
2015-10-07 15:34 |
|
Note Added: 0046566 | |
2015-10-07 15:34 |
|
Assigned To | ifv => bugmaster |
2015-10-07 15:34 |
|
Status | feedback => reviewed |
2015-10-07 15:45 |
|
Assigned To | bugmaster => mkv |
2015-10-08 12:34 | git | Note Added: 0046588 | |
2015-10-08 12:38 |
|
Note Added: 0046589 | |
2015-10-08 12:38 |
|
Note Added: 0046590 | |
2015-10-08 12:38 |
|
Assigned To | mkv => bugmaster |
2015-10-08 12:38 |
|
Status | reviewed => tested |
2015-10-09 15:22 | bugmaster | Changeset attached | => occt master a0258acd |
2015-10-09 15:22 | bugmaster | Status | tested => verified |
2015-10-09 15:22 | bugmaster | Resolution | open => fixed |
2015-10-16 16:58 | git | Note Added: 0047082 | |
2015-11-19 18:44 |
|
Additional Information Updated | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |