0026609: Wrong result obtained by solid classifier algorithm.

Test case for issue CR26609

Correction of test cases for issue CR26609